dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-record-ui-app
  namespace: argocd
  labels:
    app: student-record-ui-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: student-record-ui-app
  template:
    metadata:
      labels:
        app: student-record-ui-app
    spec:
      containers:
        - name: student-record-ui-app-container
          image: yaredgidey/cicd:8
          ports:
            - containerPort: 8080
