dev/mySql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  namespace: argocd
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: argocd
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysqldb
