dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-record-ui-app-service
  namespace: argocd
spec:
  selector:
    app: student-record-ui-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
